// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StyleSheet/ReactNativeStyleResolver resolve resolves inline-style pointerEvents to classname 1`] = `
Object {
  "classList": Array [
    "rn-pointerEvents-12vffkv",
  ],
  "className": "rn-pointerEvents-12vffkv",
}
`;

exports[`StyleSheet/ReactNativeStyleResolver resolve with register before RTL, resolves to correct className 1`] = `
Object {
  "classList": Array [
    "rn-marginRight-zso239",
    "rn-right-1bnbe1j",
    "rn-textAlign-1ff274t",
  ],
  "className": "rn-marginRight-zso239 rn-right-1bnbe1j rn-textAlign-1ff274t",
}
`;

exports[`StyleSheet/ReactNativeStyleResolver resolve with register before RTL, resolves to correct className 2`] = `
Object {
  "classList": Array [
    "rn-left-2s0hu9",
    "rn-marginLeft-1n0xq6e",
    "rn-textAlign-fdjqy7",
  ],
  "className": "rn-left-2s0hu9 rn-marginLeft-1n0xq6e rn-textAlign-fdjqy7",
}
`;

exports[`StyleSheet/ReactNativeStyleResolver resolve with register, resolves to className 1`] = `
Object {
  "classList": Array [
    "rn-borderColor-4a18lf",
    "rn-borderWidth-1yadl64",
    "rn-left-1tsx3h3",
    "rn-opacity-icoktb",
    "rn-position-u8s1d",
    "rn-width-b8lwoo",
  ],
  "className": "rn-borderColor-4a18lf rn-borderWidth-1yadl64 rn-left-1tsx3h3 rn-opacity-icoktb rn-position-u8s1d rn-width-b8lwoo",
}
`;

exports[`StyleSheet/ReactNativeStyleResolver resolve with register, resolves to className 2`] = `
Object {
  "classList": Array [
    "rn-borderColor-4a18lf",
    "rn-borderWidth-1yadl64",
    "rn-left-1tsx3h3",
    "rn-opacity-icoktb",
    "rn-position-u8s1d",
    "rn-width-l0gwng",
  ],
  "className": "rn-borderColor-4a18lf rn-borderWidth-1yadl64 rn-left-1tsx3h3 rn-opacity-icoktb rn-position-u8s1d rn-width-l0gwng",
}
`;

exports[`StyleSheet/ReactNativeStyleResolver resolve with register, resolves to className 3`] = `
Object {
  "classList": Array [
    "rn-borderColor-4a18lf",
    "rn-borderWidth-1yadl64",
    "rn-left-1tsx3h3",
    "rn-opacity-icoktb",
    "rn-position-u8s1d",
    "rn-width-b8lwoo",
  ],
  "className": "rn-borderColor-4a18lf rn-borderWidth-1yadl64 rn-left-1tsx3h3 rn-opacity-icoktb rn-position-u8s1d rn-width-b8lwoo",
}
`;

exports[`StyleSheet/ReactNativeStyleResolver resolve with register, resolves to mixed 1`] = `
Object {
  "classList": Array [
    "rn-left-1tsx3h3",
    "rn-opacity-icoktb",
    "rn-position-u8s1d",
  ],
  "className": "rn-left-1tsx3h3 rn-opacity-icoktb rn-position-u8s1d",
  "style": Object {
    "borderBottomColor": "rgba(255,0,0,1.00)",
    "borderBottomWidth": "0px",
    "borderLeftColor": "rgba(255,0,0,1.00)",
    "borderLeftWidth": "0px",
    "borderRightColor": "rgba(255,0,0,1.00)",
    "borderRightWidth": "0px",
    "borderTopColor": "rgba(255,0,0,1.00)",
    "borderTopWidth": "0px",
    "width": "100px",
  },
}
`;

exports[`StyleSheet/ReactNativeStyleResolver resolve with register, resolves to mixed 2`] = `
Object {
  "classList": Array [
    "rn-left-1tsx3h3",
    "rn-opacity-icoktb",
    "rn-position-u8s1d",
    "rn-width-l0gwng",
  ],
  "className": "rn-left-1tsx3h3 rn-opacity-icoktb rn-position-u8s1d rn-width-l0gwng",
  "style": Object {
    "borderBottomColor": "rgba(255,0,0,1.00)",
    "borderBottomWidth": "0px",
    "borderLeftColor": "rgba(255,0,0,1.00)",
    "borderLeftWidth": "0px",
    "borderRightColor": "rgba(255,0,0,1.00)",
    "borderRightWidth": "0px",
    "borderTopColor": "rgba(255,0,0,1.00)",
    "borderTopWidth": "0px",
  },
}
`;

exports[`StyleSheet/ReactNativeStyleResolver resolve with register, resolves to mixed 3`] = `
Object {
  "classList": Array [
    "rn-left-1tsx3h3",
    "rn-opacity-icoktb",
    "rn-position-u8s1d",
  ],
  "className": "rn-left-1tsx3h3 rn-opacity-icoktb rn-position-u8s1d",
  "style": Object {
    "borderBottomColor": "rgba(255,0,0,1.00)",
    "borderBottomWidth": "0px",
    "borderLeftColor": "rgba(255,0,0,1.00)",
    "borderLeftWidth": "0px",
    "borderRightColor": "rgba(255,0,0,1.00)",
    "borderRightWidth": "0px",
    "borderTopColor": "rgba(255,0,0,1.00)",
    "borderTopWidth": "0px",
    "width": "100px",
  },
}
`;

exports[`StyleSheet/ReactNativeStyleResolver resolve without register, resolves to inline styles 1`] = `
Object {
  "classList": Array [],
  "className": "",
  "style": Object {
    "borderBottomColor": "rgba(255,0,0,1.00)",
    "borderBottomWidth": "0px",
    "borderLeftColor": "rgba(255,0,0,1.00)",
    "borderLeftWidth": "0px",
    "borderRightColor": "rgba(255,0,0,1.00)",
    "borderRightWidth": "0px",
    "borderTopColor": "rgba(255,0,0,1.00)",
    "borderTopWidth": "0px",
    "left": "50px",
    "opacity": 0.5,
    "position": "absolute",
    "width": "100px",
  },
}
`;

exports[`StyleSheet/ReactNativeStyleResolver resolve without register, resolves to inline styles 2`] = `
Object {
  "classList": Array [],
  "className": "",
  "style": Object {
    "borderBottomColor": "rgba(255,0,0,1.00)",
    "borderBottomWidth": "0px",
    "borderLeftColor": "rgba(255,0,0,1.00)",
    "borderLeftWidth": "0px",
    "borderRightColor": "rgba(255,0,0,1.00)",
    "borderRightWidth": "0px",
    "borderTopColor": "rgba(255,0,0,1.00)",
    "borderTopWidth": "0px",
    "left": "50px",
    "opacity": 0.5,
    "position": "absolute",
    "width": "200px",
  },
}
`;

exports[`StyleSheet/ReactNativeStyleResolver resolve without register, resolves to inline styles 3`] = `
Object {
  "classList": Array [],
  "className": "",
  "style": Object {
    "borderBottomColor": "rgba(255,0,0,1.00)",
    "borderBottomWidth": "0px",
    "borderLeftColor": "rgba(255,0,0,1.00)",
    "borderLeftWidth": "0px",
    "borderRightColor": "rgba(255,0,0,1.00)",
    "borderRightWidth": "0px",
    "borderTopColor": "rgba(255,0,0,1.00)",
    "borderTopWidth": "0px",
    "left": "50px",
    "opacity": 0.5,
    "position": "absolute",
    "width": "100px",
  },
}
`;

exports[`StyleSheet/ReactNativeStyleResolver resolveWithNode next class names have priority over current inline styles 1`] = `
Object {
  "className": "rn-opacity-6dt33c",
  "style": Object {
    "opacity": "",
  },
}
`;

exports[`StyleSheet/ReactNativeStyleResolver resolveWithNode next inline styles have priority over current inline styles 1`] = `
Object {
  "className": "",
  "style": Object {
    "WebkitTransform": "scale(2)",
    "opacity": 1,
    "transform": "scale(2)",
  },
}
`;

exports[`StyleSheet/ReactNativeStyleResolver resolveWithNode preserves unrelated class names 1`] = `
Object {
  "className": "unknown-class-1 unknown-class-2",
  "style": Object {},
}
`;

exports[`StyleSheet/ReactNativeStyleResolver resolveWithNode preserves unrelated inline styles 1`] = `
Object {
  "className": "",
  "style": Object {
    "fontSize": "20px",
    "opacity": 1,
  },
}
`;

exports[`StyleSheet/ReactNativeStyleResolver resolveWithNode when isRTL=true & doLeftAndRightSwapInRTL=false, resolves to non-flipped inline styles 1`] = `
Object {
  "className": "",
  "style": Object {
    "marginRight": "10px",
    "paddingLeft": "10px",
    "right": "10px",
  },
}
`;

exports[`StyleSheet/ReactNativeStyleResolver resolveWithNode when isRTL=true, resolves to flipped classNames 1`] = `
Object {
  "className": "rn-left-1u10d71 rn-marginRight-zso239",
  "style": Object {
    "marginRight": "",
    "right": "5px",
  },
}
`;

exports[`StyleSheet/ReactNativeStyleResolver resolveWithNode when isRTL=true, resolves to flipped inline styles 1`] = `
Object {
  "className": "",
  "style": Object {
    "left": "10px",
    "marginRight": "10px",
    "right": "5px",
  },
}
`;
